# voice2text

./: .gitignore  LICENSE  README.md  config.toml.example  pyproject.toml
tests/: test_app.py  test_download_debug.py
voice2text/: __init__.py  app.py  clipboard.py  grammar.py  models.py  postprocess.py  recorder.py  transcripts.py  vad.py
