[project]
name = "voice2text"
version = "0.1.0"
description = "TUI voice-to-text using NVIDIA Parakeet models"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "pyaudio>=0.2.14",
    "onnx-asr>=0.10.0",
    "onnxruntime>=1.17.0",
    "huggingface-hub>=0.20.0",
    "numpy",
    "tokenizers>=0.15.0",
]

[project.scripts]
voice2text = "voice2text.app:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
